# KnowProbe

./: .gitignore  API_DASHBOARD_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  TEST_API.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml
.github/workflows/: ci.yml
configs/: default.yaml
configs/prompts/: cot_factual.jinja2  cot_schema.jinja2  examples.yaml  few_shot_factual.jinja2  few_shot_schema.jinja2  self_consistency_factual.jinja2  self_consistency_schema.jinja2  zero_shot_factual.jinja2  zero_shot_schema.jinja2
configs/prompts/_defaults/: cot.j2  few_shot.j2  react.j2  self_consistency.j2  zero_shot.j2
docker/: Dockerfile  docker-compose.yml
docs/: generator_engine_design.md
docs/tutorials/: 01_knowledge_graph.md  02_agentic_rag.md  03_multihop_and_adversarial.md
examples/agentic_demo/: agentic_demo.py
examples/graphrag_demo/: graphrag_demo.py
scripts/: start_api.py  start_dashboard.py
src/knowprobe/: __init__.py  __main__.py
src/knowprobe/adversarial/: __init__.py  generator.py
src/knowprobe/agentic/: __init__.py  agent.py
src/knowprobe/api/: __init__.py  dependencies.py  main.py  middleware.py  schemas.py
src/knowprobe/api/routes/: __init__.py  evaluation.py  experiments.py  generation.py  health.py  rag.py
src/knowprobe/benchmarks/: __init__.py  multihop.py
src/knowprobe/cli/: __init__.py  main.py  utils.py
src/knowprobe/cli/commands/: __init__.py  config.py  evaluate.py  experiment.py  generate.py
src/knowprobe/core/: __init__.py  config.py  models.py
src/knowprobe/dashboard/: __init__.py  app.py  components.py  utils.py
src/knowprobe/dashboard/pages/: __init__.py  evaluation.py  generation.py  (+2 more)
src/knowprobe/db/: models.py  session.py
src/knowprobe/evaluators/: __init__.py  experiment_runner.py  metrics.py  pipeline.py  question_evaluator.py  rag_evaluator.py  reporter.py
src/knowprobe/generators/: __init__.py  base.py  model_client.py  prompt_builder.py  question_generator.py
src/knowprobe/kg/: __init__.py  builder.py  graph.py  retriever.py
src/knowprobe/llm/: __init__.py  base.py  client.py  exceptions.py  factory.py  providers.py  types.py
src/knowprobe/parsers/: __init__.py  exceptions.py  knowledge_parser.py  knowledge_processor.py  utils.py  validators.py
src/knowprobe/prompts/: __init__.py  builder.py  engine.py  examples.py  strategies.py  templates.py
src/knowprobe/rag/: __init__.py  document_processor.py  embeddings.py  pipeline.py  rag_evaluator.py  rag_generator.py  retriever.py  vector_store.py
src/knowprobe/utils/: __init__.py  logging.py
tests/: test_api_auth.py  test_prompts.py  test_version_consistency.py
tests/adversarial/: test_generator.py
tests/agentic/: test_agent.py
tests/evaluators/: test_evaluators.py
tests/kg/: test_graph.py
tests/llm/: test_llm_client.py  validate.py
tests/parsers/: test_exceptions.py  test_knowledge_parser.py  test_knowledge_processor.py  test_utils.py  test_validators.py
