[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowprobe"
version = "3.0.0"
description = "Knowledge-Grounded Question Generation and RAG Evaluation Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jeff Han", email = "jeffhan789@gmail.com"}
]
keywords = [
    "llm", "question-generation", "knowledge-base", "rag", "evaluation",
    "knowledge-graph", "nlp", "prompt-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.2",
    "bert-score>=0.3.13",
    "sacrebleu>=2.4.0",
    "rouge-score>=0.1.2",
    "accelerate>=0.30.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
all = ["knowprobe[dev,docs]"]

[project.scripts]
knowprobe = "knowprobe.cli.main:app"
kp = "knowprobe.cli.main:app"

[project.urls]
Homepage = "https://github.com/Jeffhan789/KnowProbe"
Documentation = "https://github.com/Jeffhan789/KnowProbe#readme"
Repository = "https://github.com/Jeffhan789/KnowProbe"
Issues = "https://github.com/Jeffhan789/KnowProbe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017"]
"tests/llm/validate.py" = ["E402"]
"src/knowprobe/cli/commands/*.py" = ["B006"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
allow_redefinition = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
